--- a/app/src/main/res/layout/fragment_live_permission.xml
+++ b/app/src/main/res/layout/fragment_live_permission.xml
@@ -23,6 +23,7 @@
         app:ct_title_color="@color/color_black" />
 
     <worker8.com.github.radiogroupplus.RadioGroupPlus
+        android:id="@+id/fragment_facebook_live_permission"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/y24"
@@ -65,37 +66,37 @@
             android:focusable="true"
             app:sv_radio_button_id="@+id/live_permission_close_friends"
             app:sv_show_radio_button="true"
-            app:sv_title="Close Friends"
+            app:sv_title="朋友的朋友"
             app:sv_v_divider="true" />
 
-        <com.cylan.jiafeigou.widget.SettingItemView0
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            app:sv_radio_button_id="@+id/live_permission_acquaintance"
-            app:sv_show_radio_button="true"
-            app:sv_title="Acquaintance"
-            app:sv_v_divider="true" />
+        <!--<com.cylan.jiafeigou.widget.SettingItemView0-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--app:sv_radio_button_id="@+id/live_permission_acquaintance"-->
+        <!--app:sv_show_radio_button="true"-->
+        <!--app:sv_title="Acquaintance"-->
+        <!--app:sv_v_divider="true" />-->
 
-        <com.cylan.jiafeigou.widget.SettingItemView0
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            app:sv_radio_button_id="@+id/live_permission_family"
-            app:sv_show_radio_button="true"
-            app:sv_title="Family"
-            app:sv_v_divider="true" />
+        <!--<com.cylan.jiafeigou.widget.SettingItemView0-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--app:sv_radio_button_id="@+id/live_permission_family"-->
+        <!--app:sv_show_radio_button="true"-->
+        <!--app:sv_title="Family"-->
+        <!--app:sv_v_divider="true" />-->
 
-        <com.cylan.jiafeigou.widget.SettingItemView0
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            app:sv_radio_button_id="@+id/live_permission_good_friends"
-            app:sv_show_radio_button="true"
-            app:sv_title="Good Friends"
-            app:sv_v_divider="true" />
+        <!--<com.cylan.jiafeigou.widget.SettingItemView0-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true"-->
+        <!--app:sv_radio_button_id="@+id/live_permission_good_friends"-->
+        <!--app:sv_show_radio_button="true"-->
+        <!--app:sv_title="Good Friends"-->
+        <!--app:sv_v_divider="true" />-->
     </worker8.com.github.radiogroupplus.RadioGroupPlus>
 </LinearLayout>
