--- a/app/src/main/res/layout/layout_facebook.xml
+++ b/app/src/main/res/layout/layout_facebook.xml
@@ -20,6 +20,7 @@
         android:textSize="@dimen/sp14" />
 
     <com.cylan.jiafeigou.widget.SettingItemView0
+        android:id="@+id/setting_facebook_account_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y20"
@@ -29,11 +30,11 @@
         app:sv_v_divider="true" />
 
     <com.cylan.jiafeigou.widget.SettingItemView0
-        android:id="@+id/facebook_permission"
+        android:id="@+id/setting_facebook_permission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_white"
-        app:sv_sub_title="Jane"
-        app:sv_title="权限设置" />
+        app:sv_sub_title="公开"
+        app:sv_title="@string/LIVE_FACEBOOK_PERMISSIONS" />
 
 </LinearLayout>
