--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -282,7 +282,6 @@
                     android:id="@+id/act_panorama_camera_bottom_panel_video"
                     android:layout_width="@dimen/y26"
                     android:layout_height="@dimen/y26"
-                    android:layout_marginEnd="@dimen/y32"
                     android:layout_marginStart="@dimen/y32"
                     android:button="@drawable/camera720_icon_video_selector" />
 
@@ -290,22 +289,34 @@
                     android:id="@+id/act_panorama_camera_bottom_panel_rtmp"
                     android:layout_width="@dimen/y26"
                     android:layout_height="@dimen/y26"
-                    android:button="@drawable/camera720_icon_live_selector" />
+                    android:layout_marginStart="@dimen/y32"
+                    android:button="@drawable/camera720_icon_live_selector"
+                    android:visibility="gone" />
             </RadioGroup>
 
-            <TextView
-                android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/y15"
-                android:layout_marginStart="@dimen/y15"
-                android:drawablePadding="@dimen/y8"
-                android:drawableStart="@drawable/panorama_redording_red_dot"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="ddddddddddddddddddddddddddddddddddddddd"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/sp16" />
+                android:animateLayoutChanges="true"
+                android:orientation="horizontal"
+                android:paddingEnd="@dimen/y15"
+                android:paddingStart="@dimen/y15">
+
+                <ImageView
+                    android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_red_dot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:textColor="#FFFFFF"
+                    android:textSize="@dimen/sp16" />
+            </LinearLayout>
+
 
         </ViewSwitcher>
 
@@ -355,8 +366,7 @@
             android:layout_width="@dimen/y26"
             android:layout_height="@dimen/y26"
             android:background="@android:color/transparent"
-            android:src="@drawable/camera720_icon_live_menu_selector"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintEnd_toStartOf="@+id/act_panorama_camera_bottom_panel_more"
             app:layout_constraintStart_toEndOf="@+id/act_panorama_bottom_panel_camera_photograph"
