--- a/app/src/main/res/layout/layout_facebook.xml
+++ b/app/src/main/res/layout/layout_facebook.xml
@@ -11,12 +11,13 @@
 
 
     <EditText
+        android:id="@+id/setting_facebook_description"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y121"
         android:background="@color/color_white"
         android:gravity="start|top"
         android:hint="@string/LIVE_DETAIL_DEFAULT_CONTENT"
-        android:padding="@dimen/y15"
+        android:padding="@dimen/y5"
         android:textSize="@dimen/sp14" />
 
     <com.cylan.jiafeigou.widget.SettingItemView0
