720相册详情页下载按钮为黑色 bug

--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -305,7 +305,8 @@
                 <ImageView
                     android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_red_dot"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/panorama_redording_red_dot" />
 
                 <TextView
                     android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information"
