--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -258,43 +258,43 @@
             android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/act_panorama_bottom_panel_camera_photograph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <RadioGroup
-                android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_item"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:orientation="horizontal">
+            <!--<RadioGroup-->
+            <!--android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_item"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal">-->
 
-                <RadioButton
-                    android:id="@+id/act_panorama_camera_bottom_panel_picture"
-                    android:layout_width="@dimen/y26"
-                    android:layout_height="@dimen/y26"
-                    android:button="@drawable/camera720_icon_camera_selector"
-                    android:checked="true" />
+            <!--<RadioButton-->
+            <!--android:id="@+id/act_panorama_camera_bottom_panel_picture"-->
+            <!--android:layout_width="@dimen/y26"-->
+            <!--android:layout_height="@dimen/y26"-->
+            <!--android:button="@drawable/camera720_icon_camera_selector"-->
+            <!--android:checked="true" />-->
 
-                <RadioButton
-                    android:id="@+id/act_panorama_camera_bottom_panel_video"
-                    android:layout_width="@dimen/y26"
-                    android:layout_height="@dimen/y26"
-                    android:layout_marginEnd="@dimen/y32"
-                    android:layout_marginStart="@dimen/y32"
-                    android:button="@drawable/camera720_icon_video_selector" />
+            <!--<RadioButton-->
+            <!--android:id="@+id/act_panorama_camera_bottom_panel_video"-->
+            <!--android:layout_width="@dimen/y26"-->
+            <!--android:layout_height="@dimen/y26"-->
+            <!--android:layout_marginEnd="@dimen/y32"-->
+            <!--android:layout_marginStart="@dimen/y32"-->
+            <!--android:button="@drawable/camera720_icon_video_selector" />-->
 
-                <RadioButton
-                    android:id="@+id/act_panorama_camera_bottom_panel_rtmp"
-                    android:layout_width="@dimen/y26"
-                    android:layout_height="@dimen/y26"
-                    android:button="@drawable/camera720_icon_live_selector" />
-            </RadioGroup>
+            <!--<RadioButton-->
+            <!--android:id="@+id/act_panorama_camera_bottom_panel_rtmp"-->
+            <!--android:layout_width="@dimen/y26"-->
+            <!--android:layout_height="@dimen/y26"-->
+            <!--android:button="@drawable/camera720_icon_live_selector" />-->
+            <!--</RadioGroup>-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">
@@ -302,19 +302,25 @@
                 <ImageView
                     android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information_red_dot"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/act_panorama_camera_bottom_panel_switcher_menu_information"
+                    android:src="@drawable/panorama_redording_red_dot" />
 
                 <TextView
                     android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_information"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
                     android:layout_marginEnd="@dimen/y15"
                     android:layout_marginStart="@dimen/y15"
                     android:gravity="center"
+                    android:includeFontPadding="false"
                     android:maxLines="1"
+                    android:text="DDDDDDDDDDDDDd"
                     android:textColor="#FFFFFF"
                     android:textSize="@dimen/sp16" />
-            </LinearLayout>
+            </RelativeLayout>
 
 
         </ViewSwitcher>
