--- a/app/src/main/res/layout/fragment_login_layout_login_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_login_box.xml
@@ -60,7 +60,8 @@
                 android:layout_marginRight="@dimen/x10"
                 android:paddingLeft="@dimen/x10"
                 android:paddingRight="@dimen/x10"
-                android:src="@drawable/icon_clear_text" />
+                android:src="@drawable/icon_clear_text"
+                android:visibility="invisible" />
         </RelativeLayout>
 
         <View
