功能：首页需要显示，有线模式图标

--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -129,6 +129,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/img_device_wired"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/x2"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
