--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -338,4 +338,18 @@
             <enum name="vertical" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="SlideBar">
+        <attr name="android:textSize" />
+        <attr name="android:textColor" />
+        <attr name="slideBar_chooseTextColor" format="color" />
+        <attr name="slideBar_backgroundColor" format="color" />
+        <attr name="slideBar_chooseBackgroundColor" format="color" />
+        <attr name="slideBar_style">
+            <enum name="default_" value="0" />
+            <enum name="none" value="1" />
+            <enum name="circle" value="2" />
+            <enum name="stretch" value="3" />
+        </attr>
+    </declare-styleable>
 </resources>
